--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./public/css/src/input.css -o ./public/css/app.css --watch"
+    "dev": "npx tailwindcss -i ./public/css/src/input.css -o ./public/css/main.css --watch"
   },
   "keywords": [],
   "author": "",
