Membuat fitur program

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "pzakat",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Haris2303/Pzakat.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Haris2303/Pzakat/issues"
+  },
+  "homepage": "https://github.com/Haris2303/Pzakat#readme",
+  "description": ""
 }
